gitops/infrastructure/istio/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
spec:
  hosts:
  - "argocd.apps.homelab.com"
  gateways:
  - main-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
      target: /
      rewrite:
        uri: /
